[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/UI_BackgroundGradient.tres" type="Texture" id=1]
[ext_resource path="res://fonts/TextFonts.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/UI/GameOverControl.gd" type="Script" id=3]
[ext_resource path="res://fonts/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
use_filter = true
font_data = ExtResource( 4 )

[node name="GameOverControl" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="GameOverMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="GameOverMenu"]
self_modulate = Color( 1, 1, 1, 0.360784 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1920.0
margin_right = 1080.0
margin_bottom = 840.0
rect_rotation = 90.0
texture = ExtResource( 1 )
expand = true

[node name="GameOverMenuButtons" type="VBoxContainer" parent="GameOverMenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -131.5
margin_right = -384.0
margin_bottom = 131.5
custom_constants/separation = 40
alignment = 1

[node name="RestartButton" type="Button" parent="GameOverMenu/GameOverMenuButtons"]
margin_top = 50.0
margin_right = 384.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 2 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="GameOverMenu/GameOverMenuButtons"]
margin_top = 151.0
margin_right = 384.0
margin_bottom = 212.0
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverStats" type="VBoxContainer" parent="GameOverMenu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 384.0
margin_top = -131.5
margin_right = 768.0
margin_bottom = 131.5
custom_constants/separation = 40
alignment = 1

[node name="EnemiesKilled" type="HBoxContainer" parent="GameOverMenu/GameOverStats"]
margin_top = 104.0
margin_right = 384.0
margin_bottom = 159.0

[node name="StatName" type="Label" parent="GameOverMenu/GameOverStats/EnemiesKilled"]
margin_right = 218.0
margin_bottom = 55.0
size_flags_horizontal = 14
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Enemies:"

[node name="StatLabel" type="Label" parent="GameOverMenu/GameOverStats/EnemiesKilled"]
margin_left = 357.0
margin_right = 384.0
margin_bottom = 55.0
size_flags_horizontal = 14
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "0"

[connection signal="pressed" from="GameOverMenu/GameOverMenuButtons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GameOverMenu/GameOverMenuButtons/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
